--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.settings/org.eclipse.php.server.core.phpServersPrefs.prefs
 /.settings/org.eclipse.wst.jsdt.ui.superType.container
 /.settings/org.eclipse.wst.jsdt.ui.superType.name
+phpexcel
